
2016-12-12  Edward Hart <edward.dan.hart@gmail.com>

	* cobol85/report.pl: updated and annotated the list of compile-only
	  tests.

2016-12-06  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* testsuite.at: added cobcrun to tested programs
	* atlocal_win: changes for allowing test of Windows binaries with
	  WSL / Bash on Windows
	* testsuite.src/listings.sed: adjustment for optional package suffixes

2016-12-05  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* atlocal_valgrind: sample configuration for running testsuites
	  with valgrind
	* cobol85/report.pl: check environment for COBC/COBCRUN to override
	  the called binaries (useful for testing with valgrind)

2016-11-19  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* testsuite.src/run_extensions.at: splitted tests for CBL_GC_FORK /
	  CBL_GC_WAITPID, skip these tests if the functions return "not available"

2016-11-17  Ron Norman <rjn@inglenet.com>

	* testsuite.src/run_extensions.at: add CBL_GC_FORK & CBL_GC_WAITPID

2016-11-12  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* atlocal.in, atlocal_win: added COB_IS_RUNNING_IN_TESTMODE

2016-11-11  Dave Pitts <dpitts@cozx.com>

	* testsuite.src/listings.at: changed for new spacing

2016-11-09  Dave Pitts <dpitts@cozx.com>

	* testsuite.src/listings.at: sdded cross reference tests

2016-11-07  Dave Pitts <dpitts@cozx.com>

	* testsuite.src/listings.at: Added 88 values to printed symbol listing.

2016-11-06  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* listings-sed.sh, testsuite.src/listing.at: adjustment for new maximum
	  of 14 digits in version string
	* testsuite.src/listing.at: capture original listing, instead of unified one

2016-11-04  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* listings-sed.sh: moved from testsuite.src/listings-sed.sh
	* listings-sed.sh: adjustment for exotic shells
	* atlocal.in, atlocal_win: adjusted listings-sed.sh path in UNIFY_LISTING