@@ -24,9 +24,9 @@ IC233A.CBL      1    1    0       0       0 OK
 IC234A.CBL      1    1    0       0       0 OK
 IC235A.CBL     12   12    0       0       0 OK
 IC237A.CBL      1    1    0       0       0 OK
-IC401M.CBL      1    1    0       0       0 OK
+IC401M.CBL      0    0    0       0       0 OK
 --------    ----- ---- ---- ------- -------
-Total         251  247    0       4       0
+Total         250  246    0       4       0
 
 Number of programs:    25
 Successfully executed: 25
