@@ -1,4 +1,11 @@
 
+2016-12-14  Edward Hart <edward.dan.hart@gmail.com>
+
+	* cobol85/report.pl, cobol85/*.txt: compile only tests no longer
+	  increment the successful test counter, as this is for runtime tests.
+	* cobol85/report.pl: allow passing input to programs (e.g. for those
+	  with STOP literal).
+
 2016-12-12  Edward Hart <edward.dan.hart@gmail.com>
 
 	* cobol85/report.pl: updated and annotated the list of compile-only
